# pubmed-fetcher

./: .gitignore  pyproject.toml  readme.md  setup.py
src/pubmed_fetcher/: __init__.py  api.py  cli.py  fetcher.py  models.py  parser.py  utils.py
tests/: conftest.py  test_pubmed_fetcher.py
